<resources>
    <string name="app_name">KBC</string>
    <string name="letsplay">START GAME</string>
    <string name="b1">BACK TO HOME</string>
    <string name="b2">BACK TO HOME</string>
    <string name="b3">BACK TO HOME</string>
    <string name="b4">BACK TO HOME</string>
    <string name="b5">BACK TO HOME</string>
    <string name="b6">BACK TO HOME</string>
    <string name="b7">BACK TO HOME</string>
    <string name="b8">BACK TO HOME</string>
    <string name="b9">BACK TO HOME</string>
    <string name="b10">BACK TO HOME</string>
    <string name="introgame">START GAME</string>
    <string name="Q1">1.Grand Central Terminal, Park Avenue, New York is the worlds </string>
    <string name="Q2">2.Entomology is the science that studies</string>
    <string name="Q3">3.Eritrea, which became the 182nd member of the UN in 1993, is in the continent of</string>
    <string name="Q4">4.Garampani sanctuary is located at</string>
    <string name="Q5">5.For which of the following disciplines is Nobel Prize awarded?</string>
    <string name="Q6">6.Hitler party which came into power in 1933 is known as</string>
    <string name="Q7">7.FFC stands for</string>
    <string name="Q8">8.Fastest shorthand writer wasTextView</string>
    <string name="Q9">9.Epsom (England) is the place associated with</string>
    <string name="Q10">10.First human heart transplant operation conducted by Dr. Christiaan Barnard on Louis Washkansky, was conducted in</string>
    <string name="rb1">highest railway station</string>
    <string name="rb2">longest railway station</string>
    <string name="rb3">largest railway station</string>
    <string name="rb4">None of the Above</string>
    <string name="rb5">Behavior of human beings</string>
    <string name="rb6">The origin and history of technical and scientific terms</string>
    <string name="rb7">The formation of rocks</string>
    <string name="rb8">Insects</string>
    <string name="rb9">Africa</string>
    <string name="rb10"> Asia</string>
    <string name="rb11">Europe</string>
    <string name="rb12">Australia</string>
    <string name="rb13">Diphu, Assam</string>
    <string name="rb14">Junagarh, Gujarat</string>
    <string name="rb15">Kohima, Nagaland</string>
    <string name="rb16">Gangtok, Sikkim</string>
    <string name="rb17">Physics and Chemistry</string>
    <string name="rb18">Physiology or Medicine</string>
    <string name="rb19">Literature, Peace and Economics</string>
    <string name="rb20">All of the above</string>
    <string name="rb21">Labour Party</string>
    <string name="rb22">Ku-Klux-Klan</string>
    <string name="rb23">Democratic Party</string>
    <string name="rb24">Nazi Party</string>
    <string name="rb25">Foreign Finance Corporation</string>
    <string name="rb26">Federation of Football Council</string>
    <string name="rb27">Film Finance Corporation</string>
    <string name="rb28">None of the above</string>
    <string name="rb29">Dr. G. D. Bist</string>
    <string name="rb30">J.R.D. Tata</string>
    <string name="rb31">J.M. Tagore</string>
    <string name="rb32">Khudada Khan</string>
    <string name="rb33">Horse racing</string>
    <string name="rb34">Polo</string>
    <string name="rb35">Shooting</string>
    <string name="rb36">Snooker</string>
    <string name="rb37">1968</string>
    <string name="rb38">1967</string>
    <string name="rb39">1965</string>
    <string name="rb40">1977</string>
    <string name="congratulations">CONGRATULATIONS</string>
    <string name="score">Your Score is</string>
    <string name="b11">PLAY AGAIN</string>
    <string name="getresult">GET YOUR SCORE</string>
    <string name="gamerules">GAME RULES</string>
    <string name="rules1">1. You will get 50000 on every correct answer </string>
    <string name="rules2">2. You will have to give 5000 on every wrong answer </string>
    <string name="rule3">If you have given all wrong answer then you will get only 5000</string>
</resources>
