<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">

    <TextView
        android:id="@+id/t9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/Q9"
        android:layout_marginStart="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:id="@+id/rb33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Countresult"
        android:layout_marginTop="26dp"
        android:text="@string/rb33"
        android:layout_below="@+id/t9"
        android:layout_alignStart="@+id/t9"
        android:layout_marginStart="35dp" />

    <RadioButton
        android:id="@+id/rb34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Countresult"
        android:text="@string/rb34"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/rb33"
        android:layout_alignStart="@+id/rb33" />

    <RadioButton
        android:id="@+id/rb35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rb35"
        android:onClick="Countresult"
        android:layout_below="@+id/rb34"
        android:layout_alignStart="@+id/rb34"
        android:layout_marginTop="31dp" />

    <RadioButton
        android:id="@+id/rb36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Countresult"
        android:text="@string/rb36"
        android:layout_below="@+id/rb35"
        android:layout_alignStart="@+id/rb35"
        android:layout_marginTop="36dp" />


    <Button
        android:id="@+id/b9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Gotohome"
        android:background="@color/colorAccent"
        android:text="@string/b9"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/rb35"
        android:layout_marginBottom="52dp" />
</RelativeLayout>