<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">

    <TextView
        android:id="@+id/t5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/Q5"
        android:layout_marginStart="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:id="@+id/rb17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Countresult"
        android:layout_marginTop="26dp"
        android:text="@string/rb17"
        android:layout_below="@+id/t5"
        android:layout_alignStart="@+id/t5"
        android:layout_marginStart="35dp" />

    <RadioButton
        android:id="@+id/rb18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Countresult"
        android:text="@string/rb18"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/rb17"
        android:layout_alignStart="@+id/rb17" />

    <RadioButton
        android:id="@+id/rb19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rb19"
        android:onClick="Countresult"
        android:layout_below="@+id/rb18"
        android:layout_alignStart="@+id/rb18"
        android:layout_marginTop="31dp" />

    <RadioButton
        android:id="@+id/rb20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Countresult"
        android:text="@string/rb20"
        android:layout_below="@+id/rb19"
        android:layout_alignStart="@+id/rb19"
        android:layout_marginTop="36dp" />


    <Button
        android:id="@+id/b5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Gotohome"
        android:background="@color/colorAccent"
        android:text="@string/b5"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp" />
</RelativeLayout>