<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">

    <TextView
        android:id="@+id/t6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/Q6"
        android:layout_marginStart="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:id="@+id/rb21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Countresult"
        android:layout_marginTop="26dp"
        android:text="@string/rb21"
        android:layout_below="@+id/t6"
        android:layout_alignStart="@+id/t6"
        android:layout_marginStart="35dp" />

    <RadioButton
        android:id="@+id/rb22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Countresult"
        android:text="@string/rb22"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/rb21"
        android:layout_alignStart="@+id/rb21" />

    <RadioButton
        android:id="@+id/rb23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rb23"
        android:onClick="Countresult"
        android:layout_below="@+id/rb22"
        android:layout_alignStart="@+id/rb22"
        android:layout_marginTop="31dp" />

    <RadioButton
        android:id="@+id/rb24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Countresult"
        android:text="@string/rb24"
        android:layout_below="@+id/rb23"
        android:layout_alignStart="@+id/rb23"
        android:layout_marginTop="36dp" />


    <Button
        android:id="@+id/b6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Gotohome"
        android:background="@color/colorAccent"
        android:text="@string/b6"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp" />
</RelativeLayout>