<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">

    <TextView
        android:id="@+id/t8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/Q8"
        android:layout_marginStart="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:id="@+id/rb29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Countresult"
        android:layout_marginTop="26dp"
        android:text="@string/rb29"
        android:layout_below="@+id/t8"
        android:layout_alignStart="@+id/t8"
        android:layout_marginStart="35dp" />

    <RadioButton
        android:id="@+id/rb30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Countresult"
        android:text="@string/rb30"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/rb29"
        android:layout_alignStart="@+id/rb29" />

    <RadioButton
        android:id="@+id/rb31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rb31"
        android:onClick="Countresult"
        android:layout_below="@+id/rb30"
        android:layout_alignStart="@+id/rb30"
        android:layout_marginTop="31dp" />

    <RadioButton
        android:id="@+id/rb32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Countresult"
        android:text="@string/rb32"
        android:layout_below="@+id/rb31"
        android:layout_alignStart="@+id/rb31"
        android:layout_marginTop="36dp" />


    <Button
        android:id="@+id/b8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Gotohome"
        android:background="@color/colorAccent"
        android:text="@string/b8"
        android:layout_marginBottom="53dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>